created account profile

--- a/templates/news/base.html
+++ b/templates/news/base.html
@@ -32,9 +32,17 @@
               <li><a href="{% url 'home_page' %}">Bosh safifa</a></li>
               <li><a href="#">Biz haqimizda</a></li>
               <li><a href="{% url 'contact_page' %}">Aloqa</a></li>
+              {% if user.is_authenticated and user.is_superuser %}
+              <li><a href="{% url 'admin_page' %}">Admin sahifasi</a> </li>
+              {% endif %}
             </ul>
           </div>
           <div class="header_top_right">
+            {% if request.user.is_authenticated %}
+            <p><a href="{% url 'user_profile' %}" style="color: pink">Mening hisobim</a></p>
+            {% else %}
+            <p><a href="{% url 'login' %}" style="color: pink">Saytga kirish - Login</a></p>
+            {% endif %}
             <p>{% now "js F Y H:i" %}</p>
           </div>
         </div>
@@ -61,6 +69,11 @@
           <li><a href="{% url 'sport_page' %}">Sport</a></li>
           <li><a href="{% url 'contact_page' %}">Aloqa</a></li>
           <li><a href="{% url 'page_404' %}">404 xatolik</a></li>
+          <li>
+            <form method="get" action="{% url 'search_results' %}">
+              <input type="search" name="q" placeholder="Qidiruv..." class="form-control" style="margin: 6px 0 0 0">
+            </form>
+          </li>
         </ul>
       </div>
     </nav>
