--- a/templates/news/mahalliy.html
+++ b/templates/news/mahalliy.html
@@ -1,6 +1,6 @@
 {% extends 'news/base.html' %}
 {% load static %}
-
+{% load hitcount_tags %}
 {% block title %}<title>Mahalliy sahifa </title>{% endblock title %}
 
 {% block content %}
@@ -15,6 +15,8 @@
                   <figure class="bsbig_fig"> <a href="{{ news.get_absolute_url }}" class="featured_img"> <img alt="" src="{{ news.image.url }}"> <span class="overlay"></span> </a>
                     <figcaption> <a href="{{ news.get_absolute_url }}">{{ news.title | truncatewords:5 }}</a> </figcaption>
                     <p>{{ news.body | truncatewords:20 }}</p>
+                    <p>Ko'rilganlar soni: <i class="fa fa-eye" aria-hidden="true"></i> {% get_hit_count for news %}</p>
+
                   </figure>
                 </li>
               </ul>
