--- a/templates/news/single_page.html
+++ b/templates/news/single_page.html
@@ -1,6 +1,6 @@
 {% extends 'news/base.html' %}
 {% load static %}
-
+{% load hitcount_tags %}
 {% block title %}<title> Yolg'iz yangiliklar sahifa </title>{% endblock title %}
 
 {% block content %}
@@ -10,38 +10,45 @@
         <div class="left_content">
           <div class="single_page">
             <ol class="breadcrumb">
-              <li><a href="../index.html">Home</a></li>
-              <li><a href="#">Technology</a></li>
+              <li><a href="{% url 'home_page' %}">Bosh sahifa</a></li>
+              <li><a href="{% url 'tecnology_page' %}}">Texnalogiya</a></li>
               <li class="active">Mobile</li>
             </ol>
-            <h1>Morbi dapibus, enim quis luctus interdum</h1>
+            <h1>{{ news.title }}</h1>
+            <h5>{{ news.published_time }} | <i class="fa fa-eye" aria-hidden="true"></i> {% get_hit_count for news %}</h5>
             <div class="post_commentbox"> <a href="#"><i class="fa fa-user"></i>Wpfreeware</a> <span><i class="fa fa-calendar"></i>6:49 AM</span> <a href="#"><i class="fa fa-tags"></i>Technology</a> </div>
-            <div class="single_page_content"> <img class="img-center" src="../images/single_post_img.jpg" alt="">
-              <p>Nunc tincidunt, elit non cursus euismod, lacus augue ornare metus, egestas imperdiet nulla nisl quis mauris. Suspendisse a pharetra urna. Morbi dui lectus, pharetra nec elementum eget, vulputate ut nisi. Aliquam accumsan, nulla sed feugiat vehicula, lacus justo semper libero, quis porttitor turpis odio sit amet ligula. Duis dapibus fermentum orci, nec malesuada libero vehicula ut. Integer sodales, urna eget interdum eleifend, nulla nibh laoreet nisl, quis dignissim mauris dolor eget mi. Donec at mauris enim. Duis nisi tellus, adipiscing a convallis quis, tristique vitae risus. Nullam molestie gravida lobortis. Proin ut nibh quis felis auctor ornare. Cras ultricies, nibh at mollis faucibus, justo eros porttitor mi, quis auctor lectus arcu sit amet nunc. Vivamus gravida vehicula arcu, vitae vulputate augue lacinia faucibus.</p>
-              <blockquote> Donec volutpat nibh sit amet libero ornare non laoreet arcu luctus. Donec id arcu quis mauris euismod placerat sit amet ut metus. Sed imperdiet fringilla sem eget euismod. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Pellentesque adipiscing, neque ut pulvinar tincidunt, est sem euismod odio, eu ullamcorper turpis nisl sit amet velit. Nullam vitae nibh odio, non scelerisque nibh. Vestibulum ut est augue, in varius purus. </blockquote>
-              <ul>
-                <li>Nullam vitae nibh odio, non scelerisque nibh</li>
-                <li>Nullam vitae nibh odio, non scelerisque nibh</li>
-                <li>Nullam vitae nibh odio, non scelerisque nibh</li>
-                <li>Nullam vitae nibh odio, non scelerisque nibh</li>
-                <li>Nullam vitae nibh odio, non scelerisque nibh</li>
-                <li>Nullam vitae nibh odio, non scelerisque nibh</li>
-              </ul>
-              <h2>This is h2 title</h2>
-              <h3>This is h3 title</h3>
-              <h4>This is h4 title</h4>
-              <h5>This is h5 title</h5>
-              <h6>This is h6 Title</h6>
-              <button class="btn default-btn">Default</button>
-              <button class="btn btn-red">Red Button</button>
-              <button class="btn btn-yellow">Yellow Button</button>
-              <button class="btn btn-green">Green Button</button>
-              <button class="btn btn-black">Black Button</button>
-              <button class="btn btn-orange">Orange Button</button>
-              <button class="btn btn-blue">Blue Button</button>
-              <button class="btn btn-lime">Lime Button</button>
-              <button class="btn btn-theme">Theme Button</button>
+            <div class="single_page_content"> <img class="img-center" src="{{ news.image.url }}" alt="rasm topilmadi">
+              <p>{{ news.body | linebreaks }}</p>
+<!--              <blockquote> Donec volutpat nibh sit amet libero ornare non laoreet arcu luctus. Donec id arcu quis mauris euismod placerat sit amet ut metus. Sed imperdiet fringilla sem eget euismod. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Pellentesque adipiscing, neque ut pulvinar tincidunt, est sem euismod odio, eu ullamcorper turpis nisl sit amet velit. Nullam vitae nibh odio, non scelerisque nibh. Vestibulum ut est augue, in varius purus. </blockquote>-->
+<!--              <ul>-->
+<!--                <li>Nullam vitae nibh odio, non scelerisque nibh</li>-->
+<!--                <li>Nullam vitae nibh odio, non scelerisque nibh</li>-->
+<!--                <li>Nullam vitae nibh odio, non scelerisque nibh</li>-->
+<!--                <li>Nullam vitae nibh odio, non scelerisque nibh</li>-->
+<!--                <li>Nullam vitae nibh odio, non scelerisque nibh</li>-->
+<!--                <li>Nullam vitae nibh odio, non scelerisque nibh</li>-->
+<!--              </ul>-->
+<!--              <h2>This is h2 title</h2>-->
+<!--              <h3>This is h3 title</h3>-->
+<!--              <h4>This is h4 title</h4>-->
+<!--              <h5>This is h5 title</h5>-->
+<!--              <h6>This is h6 Title</h6>-->
+<!--              <button class="btn default-btn">Default</button>-->
+<!--              <button class="btn btn-red">Red Button</button>-->
+<!--              <button class="btn btn-yellow">Yellow Button</button>-->
+<!--              <button class="btn btn-green">Green Button</button>-->
+<!--              <button class="btn btn-black">Black Button</button>-->
+<!--              <button class="btn btn-orange">Orange Button</button>-->
+<!--              <button class="btn btn-blue">Blue Button</button>-->
+<!--              <button class="btn btn-lime">Lime Button</button>-->
+<!--              <button class="btn btn-theme">Theme Button</button>-->
             </div>
+            {% if request.user.is_authenticated and request.user.is_superuser %}
+            <div class="card-footer text-center">
+              <a href="{% url 'update_page' news.slug %}" style="font-size:20px; padding:0 50px">Tahrirlash</a>
+              <a href="{% url 'delete_page' news.slug %}" style="font-size:20px; padding:0 50px">O'chirish</a>
+            </div>
+            {% endif %}
             <div class="social_link">
               <ul class="sociallink_nav">
                 <li><a href="#"><i class="fa fa-facebook"></i></a></li>
@@ -134,34 +141,40 @@
                 </div>
               </div>
               <div role="tabpanel" class="tab-pane" id="comments">
+                <p style="font-weight: 600; font-size: 20px">{{ comment_count }} ta izoh</p>
                 <ul class="spost_nav">
+                  {% for comment in comments %}
                   <li>
-                    <div class="media wow fadeInDown"> <a href="single_page.html" class="media-left"> <img alt="" src="../images/post_img1.jpg"> </a>
-                      <div class="media-body"> <a href="single_page.html" class="catg_title"> Aliquam malesuada diam eget turpis varius 1</a> </div>
+                    <div class="media wow fadeInDown">
+                      <p><b>{{ comment.user }}</b> <span class="text-muted font-weight-normal">{{ comment.created_time }}</span></p>
+                        <div class="media-body">{{ comment.body | linebreaks }}</div>
                     </div>
                   </li>
-                  <li>
-                    <div class="media wow fadeInDown"> <a href="single_page.html" class="media-left"> <img alt="" src="../images/post_img2.jpg"> </a>
-                      <div class="media-body"> <a href="single_page.html" class="catg_title"> Aliquam malesuada diam eget turpis varius 2</a> </div>
-                    </div>
-                  </li>
-                  <li>
-                    <div class="media wow fadeInDown"> <a href="single_page.html" class="media-left"> <img alt="" src="../images/post_img1.jpg"> </a>
-                      <div class="media-body"> <a href="single_page.html" class="catg_title"> Aliquam malesuada diam eget turpis varius 3</a> </div>
-                    </div>
-                  </li>
-                  <li>
-                    <div class="media wow fadeInDown"> <a href="single_page.html" class="media-left"> <img alt="" src="../images/post_img2.jpg"> </a>
-                      <div class="media-body"> <a href="single_page.html" class="catg_title"> Aliquam malesuada diam eget turpis varius 4</a> </div>
-                    </div>
-                  </li>
+                  <hr>
+                  {% endfor %}
                 </ul>
               </div>
             </div>
           </div>
+          {% if user.is_authenticated %}
+          <div class="single_sidebar wow fadeInDown col-md-8 card mb-4 mt-3">
+            <h2><span>Izoh qo'shish</span></h2>
+            <div class="card-body">
+              <form method="post" style="margin-top: 1.3em">{% csrf_token %}
+                {{ comment_form.as_p }}
+                <button class="btn btn-primary btn-lg">Yuborish</button>
+              </form>
+            </div>
+          </div>
+          {% else %}
           <div class="single_sidebar wow fadeInDown">
-            <h2><span>Sponsor</span></h2>
-            <a class="sideAdd" href="#"><img src="../images/add_img.jpg" alt=""></a> </div>
+            <h2><span>Izoh qo'shish</span></h2>
+            Faqatgina ro'yxatdan o'tgan foydalanuvchilargina izoh qoldirishi mumkin.<br>
+            <a href="{% url 'user_registr' %}" style="margin-right: 30px">Ro'yxatdan o'tish - Signup</a>
+            <a href="{% url 'login' %}">Saytga kiring - Login</a>
+          </div>
+
+          {% endif %}
           <div class="single_sidebar wow fadeInDown">
             <h2><span>Category Archive</span></h2>
             <select class="catgArchive">
