--- a/templates/news/texnalogiya.html
+++ b/templates/news/texnalogiya.html
@@ -1,6 +1,6 @@
 {% extends 'news/base.html' %}
 {% load static %}
-
+{% load hitcount_tags %}
 {% block title %}    <title>Texnalogiya sahifa </title>{% endblock title %}
 
 {% block content %}
@@ -12,6 +12,8 @@
                     <figure class="bsbig_fig wow fadeInDown"> <a href="{{ texnalogiya.get_absolute_url }}" class="featured_img"> <img alt="" src="{{ texnalogiya.image.url }}"> <span class="overlay"></span> </a>
                       <figcaption> <a href="{{ texnalogiya.get_absolute_url }}">{{ texnalogiya.title | truncatewords:5 }}</a> </figcaption>
                       <p>{{ texnalogiya.body | truncatewords:20 }}</p>
+                      <p>Ko'rilganlar soni: <i class="fa fa-eye" aria-hidden="true"></i> {% get_hit_count for texnalogiya %}</p>
+
                     </figure>
                   </li>
                   {% endfor %}
