--- a/templates/news/xorij.html
+++ b/templates/news/xorij.html
@@ -1,6 +1,6 @@
 {% extends 'news/base.html' %}
 {% load static %}
-
+{% load hitcount_tags %}
 {% block title %}    <title>Xorij sahifa </title>{% endblock title %}
 
 {% block content %}
@@ -13,6 +13,8 @@
                     <figure class="bsbig_fig"> <a href="{{ xorij.get_absolute_url }}" class="featured_img"> <img alt="" src="{{ xorij.image.url }}"> <span class="overlay"></span> </a>
                       <figcaption> <a href="{{ xorij.get_absolute_url }}">{{ xorij.title | truncatewords:5 }}</a> </figcaption>
                       <p>{{ xorij.body | truncatewords:20 }}</p>
+                        <p>Ko'rilganlar soni: <i class="fa fa-eye" aria-hidden="true"></i> {% get_hit_count for xorij %}</p>
+
                     </figure>
                   </li>
                   {% endfor %}
